# CS3P1-Cluster

./: CMakeLists.txt  README.md  down_cluster.sh  init_cluster.sh
docker/: Dockerfile  build_docker_compose.sh  configure_mpi_hosts.sh  cp-scripts.txt  docker-compose.yaml
docker/scripts/: build_dc.sh  load_hosts.sh
source/: hello_world.cpp  main.cpp  mpi_mat_vect_mult.cpp  mpi_odd_even.cpp
